--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
