Poprawiono problem z wyswietlaniem nieskonczonych gier.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hybrid-dashboard-angular",
-  "version": "0.0.0",
+  "name": "hybrid-quiz-dashboard",
+  "version": "1.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
